pytest-race changelog
=====================


v0.1.0
------
+ Basic functionality.